files can be uploaded simply

--- a/web_server/www/penguinserv/index.html
+++ b/web_server/www/penguinserv/index.html
@@ -39,6 +39,11 @@
         <div class="image-container">
             <img src="./img/indexPenguin.jpg" alt="Index Penguin Image">
         </div>
+		<form  enctype="multipart/form-data" method="post" action="#">
+			<input  name="myfile" type="file" />
+			<input type="submit" value="submit" id="submit" />
+		 </form>
+		 
         <p>Feel free to penguin up.</p>
     </div>
 </body>
