--- a/web_server/DefaultErrorPages/405MethodNotAllowed.html
+++ b/web_server/DefaultErrorPages/405MethodNotAllowed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>502 Bad Gateway</title>
+    <title>405 Method Not Allowed</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>502 - Bad Gateway</h1>
+        <h1>405 - Method Not Allowed</h1>
         <p>The requested page could not be found on this server.</p>
     </div>
 </body>
