Post merge adjustments for compiling, update uri builder

--- a/WebServer/www/penguinserv/tours/indexTours.html
+++ b/WebServer/www/penguinserv/tours/indexTours.html
@@ -37,7 +37,7 @@
         <h1>Welcome to the index of tours </h1>
         <p>This is the default landing page for the index of tours.</p>
         <div class="image-container">
-            <img src="./img/indexPenguin.jpg" alt="Index Penguin Image">
+            <img src="../img/indexPenguin.jpg" alt="Index Penguin Image">
         </div>
         <p>Feel free to penguin up.</p>
     </div>
