--- a/WebServer/www/penguinserv/index.html
+++ b/WebServer/www/penguinserv/index.html
@@ -39,7 +39,7 @@
         <div class="image-container">
             <img src="./img/indexPenguin.jpg" alt="Index Penguin Image">
         </div>
-		<form  enctype="multipart/form-data" method="post" action="#">
+		<form  enctype="multipart/form-data" method="post">
 			<input  name="myfile" type="file" />
 			<input type="submit" value="submit" id="submit" />
 		 </form>
