--- a/WebServer/www/penguinserv/index.html
+++ b/WebServer/www/penguinserv/index.html
@@ -43,7 +43,10 @@
 			<input  name="myfile" type="file" />
 			<input type="submit" value="submit" id="submit" />
 		 </form>
-		 
+		 <form method="post" action="cgiRoute/postCgi.php">
+            Name: <input type="text" name="name">
+            <input type="submit" value="Submit">
+        </form>
         <p>Feel free to penguin up.</p>
     </div>
 </body>
